--- a/public/style/mediaPlayer.css
+++ b/public/style/mediaPlayer.css
@@ -11,10 +11,10 @@
     box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.2);
     min-height: 56px;
 
-    pointer-events: none;
-    transform: translateY(100%);
+    pointer-events: auto;
+    /* transform: translateY(100%);
     opacity: 0;
-    transition: transform 0.25s cubic-bezier(.4, 0, .2, 1), opacity 0.25s cubic-bezier(.4, 0, .2, 1);
+    transition: transform 0.25s cubic-bezier(.4, 0, .2, 1), opacity 0.25s cubic-bezier(.4, 0, .2, 1); */
 
     display: flex;
     flex-direction: column;
@@ -57,10 +57,16 @@
     opacity: 1;
 }
 
+
+
+.mediaPlayerBar {
+    /* transform: none;
+    opacity: 0%; */
+}
+
 .mediaPlayerBar--visible {
-    transform: translateY(0);
+    /* transform: translateY(0); */
     opacity: 94%;
-    pointer-events: auto;
 }
 
 .mediaPlayerBarTransport {
